<resources>
    <string name="app_name">Thirty</string>
    <string name="button_roll">Roll dice!</string>
    <string name="button_endTurn">End turn</string>
    <string name="total_score">Total Points: </string>
    <string name="round_score">Current selection: </string>
    <string name="low_string">Low: </string>
    <string name="total_score_endgame">Total score was: </string>
    <string name="play_again_button">Play again</string>
    <string name="spinner_label">Score using: </string>
    <string name="end_turn_nr_string">End turn Nr </string>
    <string name="last_turn_string">End last turn</string>

    <string-array name="scoring_methods">
        <item>low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
