<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="12dp"
    android:background="#f9f9f9"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="bottom|center"
    android:weightSum="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:layout_weight="0.38">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/diceButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>

            <ImageButton
                android:id="@+id/diceButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/diceButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>

            <ImageButton
                android:id="@+id/diceButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/diceButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>

            <ImageButton
                android:id="@+id/diceButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f9f9f9"
                app:srcCompat="@mipmap/dice_white1"/>

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/roundPointsString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:text="@string/round_score"/>

    <TextView
        android:id="@+id/lowString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/low_string"/>

    <TextView
        android:id="@+id/totalPointsString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:text="@string/total_score"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08">

        <Button
            android:id="@+id/rollButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C01831"
            android:onClick="meonFb"
            android:text="@string/button_roll"
            android:textColor="#ffffff"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/endTurnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C01831"
            android:onClick="meonFb"
            android:text="@string/button_endTurn"
            android:textColor="#ffffff"
            />
    </TableRow>

</LinearLayout>
